[tool.poetry]
authors = ["Timothy Shields <Timothy.Shields@twosigma.com>", "Daniel Shields <Daniel.Shields@twosigma.com>"]
description = "uberjob is a Python package for building and running call graphs."
documentation = "https://uberjob.readthedocs.io/"
homepage = "https://github.com/twosigma/uberjob"
include = [
  "LICENSE",
]
keywords = []
license = "Apache-2.0"
name = "uberjob"
packages = [
  {include = "uberjob", from = "src"},
]
readme = "README.md"
repository = "https://github.com/twosigma/uberjob"
version = "0.1.0"

[tool.poetry.dependencies]
networkx = "^2.5"
nxv = "^0.1.3"
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
codecov = "^2.1.9"
coverage = {extras = ["toml"], version = "^5.3"}
flake8 = "^3.8.3"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
isort = "^5.5.3"
pytest = "^5.2"
pytest-cov = "^2.10.1"
releases = "^1.6.3"
six = "^1.15.0"
sphinx = "^3.2.1"
sphinx-autodoc-typehints = "^1.11.0"
sphinx_rtd_theme = "^0.5.0"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["uberjob"]

[tool.coverage.report]
show_missing = true

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
