[tool.poetry]
authors = ["Timothy Shields <Timothy.Shields@twosigma.com>", "Daniel Shields <Daniel.Shields@twosigma.com>"]
description = "uberjob is a Python package for building and running call graphs."
documentation = "https://uberjob.readthedocs.io/"
homepage = "https://github.com/twosigma/uberjob"
include = [
  "LICENSE",
]
keywords = []
license = "Apache-2.0"
name = "uberjob"
packages = [
  {include = "uberjob", from = "src"},
]
readme = "README.md"
repository = "https://github.com/twosigma/uberjob"
version = "1.0.0"

[tool.poetry.dependencies]
networkx = "^2.5"
nxv = "^0.1.3"
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.8"
codecov = "^2.1.12"
coverage = {extras = ["toml"], version = "^6.3.1"}
flake8 = "^5.0.4"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.8.23"
isort = "^5.10.1"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
releases = "^1.6.3"
six = "^1.16.0"
sphinx = "^4.0.0"
sphinx-autodoc-typehints = "^1.16.0"
sphinx_rtd_theme = "^1.0.0"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["uberjob"]

[tool.coverage.report]
show_missing = true

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.2"]
